syntax = "proto3";

package v1;

import "third_party/tagger/tagger.proto";

option go_package = "./v1;api_v1";

message KeyboardMessage{
    message Data{
        int32 sender_id = 1;
        int32 receiver_id = 2;
    }

    string event = 1;
    Data data = 3;
}

message MessageReceiver{
    int32 dialog_type = 1;
    int32 receiver_id = 2;
}

message TextMessageRequest{
    string type = 1;
    string content = 4 [(tagger.tags) = "binding:\"required\""];

    message Mention{
        int32 all = 1;
        repeated int32 uids = 2;
    }

    Mention mention = 5;
    string quote_id = 6;
    MessageReceiver receiver = 7;
}

message ImageMessageRequest{
    string type = 1;
    string url = 2 [(tagger.tags) = "binding:\"required\""];
    int32 width = 3 [(tagger.tags) = "binding:\"required\""];
    int32 height = 4 [(tagger.tags) = "binding:\"required\""];
    int32 size = 5 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 6;
    string quote_id = 7;
}

message VoiceMessageRequest{
    string type = 1;
    string url = 2 [(tagger.tags) = "binding:\"required\""];
    int32 duration = 3 [(tagger.tags) = "binding:\"required,gt=0\""];
    int32 size = 4 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 5;
}

message VideoMessageRequest{
    string type = 1;
    string url = 2 [(tagger.tags) = "binding:\"required\""];
    int32 duration = 3 [(tagger.tags) = "binding:\"required,gt=0\""];
    int32 size = 4 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 5;
    string cover = 6;
}

message FileMessageRequest{
    string type = 1;
    string upload_id = 2 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 5;
}

message CodeMessageRequest{
    string type = 1;
    string lang = 2 [(tagger.tags) = "binding:\"required\""];
    string code = 3 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 5;
}

message LocationMessageRequest{
    string type = 1;
    string longitude = 2 [(tagger.tags) = "binding:\"required\""];
    string latitude = 3 [(tagger.tags) = "binding:\"required\""];
    string description = 4 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 5;
}

message ForwardMessageRequest{
    string type = 1;
    int32 mode = 2 [(tagger.tags) = "binding:\"required\""];
    repeated int32 message_ids = 3 [(tagger.tags) = "binding:\"required\""];
    repeated int32 gids = 4;
    repeated int32 uids = 5;
    MessageReceiver receiver = 6;
}

message VoteMessageRequest{
    string type = 1;
    string title = 2 [(tagger.tags) = "binding:\"required\""];
    int32 mode = 3 [(tagger.tags) = "binding:\"required\""];
    int32 anonymous = 4 [(tagger.tags) = "binding:\"required\""];
    repeated string options = 5 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 6;
}

message LoginMessageRequest{
    string ip = 1;
    string agent = 2;
    // string address = 3;
    // string platform = 4;
    // string reason = 5;
}

message StickerMessageRequest{
    string type = 1;
    int32 sticker_id = 2 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 3;
}

message CardMessageRequest{
    string type = 1;
    int32 user_id = 2 [(tagger.tags) = "binding:\"required\""];
    MessageReceiver receiver = 3;
}

message MixedMessageRequest{
    message Item{
        int32 type = 1;
        string content = 2;
    }

    string type = 1;
    repeated Item items = 2;
    MessageReceiver receiver = 3;
    string quote_id = 4;
}
